fix: image download

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="hero-column-left">
                         <div class="value-certificate" id="hero-cert-container">
                             <img src="" id="certificate-image"
-                                alt="Your #1 Power Value is Loyalty">
+                                alt="Your #1 Power Value is">
                         </div>
                         <div class="hero-actions-container">
                             <p class="share-label">Share Via</p>
