remove: download btn href

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             Knowing your values is powerful. <strong>Living them daily is transformational.</strong>
                         </p>
                         <div class="hero-download-action">
-                            <a href="#" id="downloadButton" class="button button-secondary button-small" target="_blank"
+                            <a id="downloadButton" class="button button-secondary button-small" target="_blank"
                                 rel="noopener noreferrer">Download Certificate</a>
                         </div>
                     </div>
