--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
 
         <section class="hero">
             <div class="container hero-container-new">
-
                 <div class="hero-main-grid">
                     <div class="hero-column-left">
                         <div class="value-certificate" id="hero-cert-container">
-                            <img src="" id="certificate-image"
-                                alt="Your #1 Power Value is">
+                            <img src="" id="certificate-image" alt="Your #1 Power Value is">
+                            <span class="loader"></span>
                         </div>
                         <div class="hero-actions-container">
                             <p class="share-label">Share Via</p>
@@ -93,7 +92,7 @@
                     </div>
 
                     <div class="hero-column-right">
-                        <h1 id="hero-h1">Your #1 Power Value is… <span id="value-name"></span></h1>
+                        <h1 id="hero-h1">Your #1 Power Value is… <span id="value-name"><span class="loader"></span></span></h1>
                         <h2 id="hero-h2">This is the spark that, when honored, unlocks your fullest potential.</h2>
                         <p class="hero-body" id="hero-body">
                             Your full hierarchy of 10 Power Values has been sent to your inbox. Inside, you’ll see what
